--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ web_modules/
 .env.local
 
 # variables
-variables.env.sample
+variables.env
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
